# advent-of-code

./: .gitignore  README.md
.github/workflows/: rust.yml
rust/: Cargo.toml
rust/src/: aoc2015.rs  aoc2023.rs  day_template.rs  input.rs  main.rs  solution.rs
rust/src/aoc2015/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
rust/src/aoc2023/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs
rust/src/aoc2023/utils/: trie.rs
