[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
curl = "0.4.44"
itertools = "0.11.0"
md-5 = "0.10.5"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
